--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "^0.2.1",
     "rimraf": "^5.0.5",
     "rxjs": "^7.8.1",
@@ -47,7 +48,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
-    "@types/jsonwebtoken": "^9.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.11.24",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.8",
